# ai-tech-radar

./: .gitignore  check_db.py  check_db2.py  check_feeds.sh  kb_page.html  temp_fix_all.py  temp_fix_ddl.py  temp_fix_import.py  temp_fix_import2.py  temp_fix_import3.py  temp_fix_kb.py  temp_fix_md.py  temp_fix_models.py  verify_config.py
code-example/code/: README.md  SDK_README.md  main.py  pyproject.toml  run_agent.py
code-example/code/app/api/: __init__.py  models.py
code-example/code/app/api/v1/: __init__.py  agent.py  demo.py  health.py
code-example/code/app/models/: agent_models.py
code-example/code/app/services/: __init__.py  agent_service.py
code-example/code/app/utils/: __init__.py  prompts.py
code-example/code/app/utils/logger/: __init__.py  logger.py
code-example/code/app/web/: __init__.py  config.py  exceptions.py  middleware.py
code-example/code/docs/: chat_model.md  document.md  embedding.md  installation.md  rerank.md  tools_plugins.md  web_search.md
tech-research/: DEPLOYMENT.md  _fix_aws_xxl.py  pack.py  temp_fix1.py  temp_fix2.py  temp_fix234.py  temp_fix2b.py  temp_fix3.py  temp_fix4.py
temp/: _cleanup.py  _fix_import.py  _fix_import2.py  _fix_import3.py  _fix_import4.py  _fix_insight.py  _fix_kb.py  _fix_kb2.py  fix.py
原始输入/: AI 技术趋势洞察库.xlsx  AI技术趋势洞察雷达-系统说明文档.md  Talentsview&Langchain-Htai Python SDK文档.docx  ai雷达需求文档修改方向_原文.docx  final_pipeline.py
编码过程/: S01_基础设施搭建_20260612.md  S02_AWS核心流水线_20260612.md  S03_内部核心与调度治理_20260612.md  S05_补充_网页采集器适配_20260612.md  S06_补充_EIPLite客户端与问答对接_20260612.md  S07_补充_内部大模型对接_20260612.md  (+28 more)
(+146 files in other folders)
